Register and login using Social account successfuly
